[package]
authors = ['Bholdus <https://github.com/bholdus>']
edition = '2018'
homepage = 'https://bholdus.com'
name = 'bholdus-runtime'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = '1.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '4.0.0'

[dependencies.max-encoded-len]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.log]
default-features = false
version = '0.4'


# FRAME dependencies

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
branch = 'bholdus-monthly-2021-07'
version = '3.1.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
# path = '../frame/system'
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.1.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-babe]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-session]
default-features = false
features = ["historical"]
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-session-benchmarking]
default-features = false
optional = true
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-offences-benchmarking]
default-features = false
optional = true
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-bounties]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-mmr]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-proxy]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-identity]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'


# Substrate primitives
[dependencies.sp-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'
# branch = 'bholdus-monthly-2021-07'
# path = '../sub-primitives/core'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-npos-elections]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '0.9.0'

# local dependencies
#pallet-template = { default-features = false, version = '3.0.0', path = '../pallets/template' }

[dependencies.bholdus-primitives]
default-features = false
version = '3.0.0'
path = '../../primitives'

[dependencies.bholdus-tokens]
default-features = false
version = '3.0.0'
path = '../../pallets/tokens'

[dependencies.bholdus-support]
default-features = false
version = '3.0.0'
path = '../../pallets/support'

[dependencies.bholdus-currencies]
default-features = false
version = '3.0.0'
path = '../../pallets/currencies'

[dependencies.pallet-template]
default-features = false
version = '3.0.0'
path = '../../pallets/template'

[dependencies.bholdus-chainbridge]
default-features = false
version = '3.0.0'
path = '../../pallets/chainbridge'

[dependencies.bholdus-chainbridge-transfer]
default-features = false
version = '3.0.0'
path = '../../pallets/chainbridge-transfer'

[dependencies.bholdus-dex]
default-features = false
version = '3.0.0'
path = '../../pallets/dex'

[dependencies.bholdus-nft]
default-features = false
version = '3.0.0'
path = '../../pallets/non-fungible-token'

[dependencies.bholdus-lib-nft]
default-features = false
version = '3.0.0'
path = '../../bholdus-libs/nft'

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-template/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-staking/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-treasury/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-indices/runtime-benchmarks',
	'pallet-bounties/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-proxy/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'bholdus-chainbridge/runtime-benchmarks',
	'bholdus-nft/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
	]
	std = [
		'codec/std',
		'frame-executive/std',
		'frame-support/std',
		'frame-system-rpc-runtime-api/std',
		'frame-system/std',
		'pallet-balances/std',
		'pallet-grandpa/std',
		'pallet-randomness-collective-flip/std',
		'pallet-sudo/std',
		'pallet-template/std',
		'pallet-timestamp/std',
		'pallet-transaction-payment-rpc-runtime-api/std',
		'pallet-transaction-payment/std',
		'pallet-staking/std',
		'pallet-aura/std',
		'pallet-babe/std',
		'pallet-session/std',
		'pallet-im-online/std',
		'pallet-authority-discovery/std',
		'pallet-offences/std',
		'pallet-treasury/std',
		'pallet-utility/std',
		'pallet-collective/std',
		'pallet-election-provider-multi-phase/std',
		'pallet-indices/std',
		'pallet-bounties/std',
		'pallet-authorship/std',
		'pallet-contracts/std',
		'pallet-contracts-rpc-runtime-api/std',
		'pallet-mmr/std',
		'pallet-multisig/std',
		'pallet-proxy/std',
		'pallet-identity/std',
		'pallet-recovery/std',
		'bholdus-chainbridge/std',
		'bholdus-tokens/std',
		'bholdus-support/std',
		'bholdus-currencies/std',
		'bholdus-dex/std',
		'bholdus-chainbridge-transfer/std',
		'bholdus-nft/std',
		'bholdus-primitives/std',
# Bholdus Lib
		'bholdus-lib-nft/std',
		'sp-api/std',
		'sp-block-builder/std',
		'sp-core/std',
		'sp-inherents/std',
		'sp-offchain/std',
		'sp-runtime/std',
		'sp-session/std',
		'sp-std/std',
		'sp-transaction-pool/std',
		'sp-version/std',
		'sp-staking/std',
		'sp-authority-discovery/std',
		'sp-npos-elections/std',
		'sp-consensus-aura/std',
		'max-encoded-len/std',
		]
