[package]
authors = ['Bholdus <https://github.com/bholdus>']
edition = '2018'
homepage = 'https://bholdus.com'
name = 'bholdus-runtime'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = '1.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '5.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.log]
default-features = false
version = '0.4'


# FRAME dependencies

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
# path = '../frame/system'
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-session]
default-features = false
features = ["historical"]
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-session-benchmarking]
default-features = false
optional = true
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-offences]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-offences-benchmarking]
default-features = false
optional = true
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-bounties]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-mmr]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-proxy]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-identity]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-recovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.pallet-bags-list]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

# Substrate primitives
[dependencies.sp-api]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'
# branch = 'master'
# path = '../sub-primitives/core'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-npos-elections]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '0.10.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '4.0.0-dev'

# local dependencies

[dependencies.bholdus-primitives]
default-features = false
version = '4.0.0-dev'
path = '../../primitives'

[dependencies.bholdus-tokens]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/tokens'

[dependencies.bholdus-support]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/support'

[dependencies.bholdus-currencies]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/currencies'

[dependencies.pallet-template]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/template'

[dependencies.bholdus-chainbridge]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/chainbridge'

[dependencies.bholdus-chainbridge-transfer]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/chainbridge-transfer'

[dependencies.bholdus-dex]
default-features = false
version = '4.0.0-dev'
path = '../../pallets/dex'

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-template/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-staking/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-treasury/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-indices/runtime-benchmarks',
	'pallet-bounties/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-proxy/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'bholdus-chainbridge/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
std = [
	'codec/std',
	'scale-info/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-template/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-staking/std',
	'pallet-aura/std',
	'pallet-session/std',
	'pallet-im-online/std',
	'pallet-authority-discovery/std',
	'pallet-offences/std',
	'pallet-treasury/std',
	'pallet-utility/std',
	'pallet-collective/std',
	'pallet-election-provider-multi-phase/std',
	'pallet-indices/std',
	'pallet-bounties/std',
	'pallet-authorship/std',
	'pallet-contracts/std',
	'pallet-contracts-rpc-runtime-api/std',
	'pallet-mmr/std',
	'pallet-multisig/std',
	'pallet-proxy/std',
	'pallet-identity/std',
	'pallet-recovery/std',
	'bholdus-chainbridge/std',
	'bholdus-tokens/std',
	'bholdus-support/std',
	'bholdus-currencies/std',
	'bholdus-dex/std',
	'bholdus-chainbridge-transfer/std',
	'bholdus-primitives/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'sp-staking/std',
	'sp-authority-discovery/std',
	'sp-npos-elections/std',
	'sp-consensus-aura/std',
	'sp-io/std',
]
