[package]
authors = ['Bholdus <https://github.com/bholdus>']
edition = '2018'
homepage = 'https://bholdus.com'
name = 'bholdus-runtime'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = '1.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/bholdus/substrate.git'
branch = 'master'
version = '5.0.0-dev'

[dependencies]
codec = { version = '2.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.1', optional = true}
log = { version = '0.4', default-features = false }

# FRAME dependencies
frame-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, optional = true, branch = 'master' }
frame-executive = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
frame-support = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
frame-system = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
frame-system-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, optional = true, branch = 'master' }
frame-system-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
frame-election-provider-support = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }

pallet-balances = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-grandpa = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-sudo = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-timestamp = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-transaction-payment = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-staking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-staking-reward-curve = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-aura = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-session = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-session-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, optional = true, branch = 'master' }
pallet-im-online = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-authority-discovery = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-offences = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-offences-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, optional = true, branch = 'master' }
pallet-treasury = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-utility = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-collective= { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-election-provider-multi-phase = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-indices = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-bounties = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-authorship = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-contracts = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-contracts-rpc-runtime-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-contracts-primitives = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-mmr = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-scheduler = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-proxy = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-identity = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-recovery = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-bags-list = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-multisig = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-beefy = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
pallet-beefy-mmr = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }

# Substrate primitives
sp-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-block-builder = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-core = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-inherents = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-offchain = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-session = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-std = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-transaction-pool = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-version = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-staking = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-authority-discovery = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-npos-elections = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-consensus-aura = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }
sp-io = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', default-features = false, branch = 'master' }


# local dependencies
bholdus-primitives = { version = '4.0.0-dev', path = '../../primitives/bholdus', default-features = false }
bholdus-tokens = { version = '4.0.0-dev', path = '../../pallets/tokens', default-features = false }
bholdus-support = { version = '4.0.0-dev', path = '../../pallets/support', default-features = false }
bholdus-currencies = { version = '4.0.0-dev', path = '../../pallets/currencies', default-features = false }
bholdus-chainbridge = { version = '4.0.0-dev', path = '../../pallets/chainbridge', default-features = false }
bholdus-chainbridge-transfer = { version = '4.0.0-dev', path = '../../pallets/chainbridge-transfer', default-features = false }
bholdus-dex = { version = '4.0.0-dev', path = '../../pallets/dex', default-features = false }
pallet-template = { version = '4.0.0-dev', path = '../../pallets/template', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-template/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-staking/runtime-benchmarks',
	'pallet-session-benchmarking',
	'pallet-im-online/runtime-benchmarks',
	'pallet-offences-benchmarking',
	'pallet-treasury/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-election-provider-multi-phase/runtime-benchmarks',
	'pallet-indices/runtime-benchmarks',
	'pallet-bounties/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-proxy/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'bholdus-chainbridge/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
std = [
	'codec/std',
	'scale-info/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-template/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-staking/std',
	'pallet-aura/std',
	'pallet-session/std',
	'pallet-im-online/std',
	'pallet-authority-discovery/std',
	'pallet-offences/std',
	'pallet-treasury/std',
	'pallet-utility/std',
	'pallet-collective/std',
	'pallet-election-provider-multi-phase/std',
	'pallet-indices/std',
	'pallet-bounties/std',
	'pallet-authorship/std',
	'pallet-contracts/std',
	'pallet-contracts-rpc-runtime-api/std',
	'pallet-mmr/std',
	'pallet-multisig/std',
	'pallet-proxy/std',
	'pallet-identity/std',
	'pallet-recovery/std',
	'pallet-beefy/std',
	'pallet-beefy-mmr/std',
	'bholdus-chainbridge/std',
	'bholdus-tokens/std',
	'bholdus-support/std',
	'bholdus-currencies/std',
	'bholdus-dex/std',
	'bholdus-chainbridge-transfer/std',
	'bholdus-primitives/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'sp-staking/std',
	'sp-authority-discovery/std',
	'sp-npos-elections/std',
	'sp-consensus-aura/std',
	'sp-io/std',
]
